fixed subtle pernicious bug with title spacing

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -9,6 +9,7 @@ $title-font: "Futura", sans-serif;
 $main-font: "Palatino", serif;
 
 $title-size: 4.5em;
+$title-spacing: .35em;
 $h1-size: 2.2em;
 $h2-size: $h1-size * 0.77;
 
@@ -46,7 +47,6 @@ body
 
 header
 {
-	width: 100%;
 	height: 12em;
 	background: linear-gradient($gradient-pink, $gradient-navy);
 
@@ -55,22 +55,27 @@ header
 		color: white;
 		font: condensed $title-size $title-font;
 		text-align: center;
-		overflow: hidden;
-		letter-spacing: .35em;
+		padding-left: $title-spacing;
+		letter-spacing: $title-spacing;
 	}
+}
+
+#title-container
+{
+	width: 95%;
+	margin: 0 auto;
 }
 
 /* Body stuff */
 
-h1
+h2
 {
-	width: 100%;
 	font: condensed $h1-size $title-font;
 	margin: $text-margin;
 	color: $text-color;
 }
 
-h2
+h3
 {
 	font: condensed $h2-size $title-font;
 	margin: $text-margin;
